--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.1.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19"
   }
 }
