--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.2.1",
     "axios": "^0.24.0",
+    "framer-motion": "^5.3.3",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.1",
+    "react-query": "^3.34.0",
     "recoil": "^0.5.2"
   },
   "devDependencies": {
